--- a/freedv_low/freedv_low.tex
+++ b/freedv_low/freedv_low.tex
@@ -615,7 +615,7 @@ E &= \sum^{M-1}_{n=0} | p(n) - p^\prime(n) |^2 \\
 E &= \sum^{M-1}_{n=0} | p(n) - gr(n+N_t)|^2
 \end{split}
 \end{equation}
-where $r(n)$ is the received off air samples at the current time offset $N_{t}$, and $g$ is a complex scalar gain that models level and phase variations.  $E$ will be mimimised when the received signal is a close match to the pilot sequence. Expressing $p(n)$ and $r(n+N_t)$ as column vectors:
+where $r(n)$ is the received off air samples at the current time offset $N_{t}$  (in samples), and $g$ is a complex scalar gain that models magnitude scaling and phase shift over the channel.  $E$ will be mimimised when the received signal is a close match to the pilot sequence. Expressing $p(n)$ and $r(n+N_t)$ as column vectors:
 \begin{equation}
 \label{eq:acq_e}
 \begin{split}
@@ -632,12 +632,30 @@ Substituting back into (\ref{eq:acq_e}):
 \label{eq:acq_corr}
 \begin{split}
 E &= \bm{p}^H\bm{p} - \frac{(\bm{r}^H \bm{p})^2}{\bm{r}^H\bm{r}} \\
-E &= \bm{p}^H\bm{p} - C_t \\
-C_t &= \frac{(\bm{r}^H \bm{p})^2}{\bm{r}^H\bm{r}} \\
-\sqrt{C_t} &= \frac{\bm{r}^H \bm{p}}{\sqrt{\bm{r}^H\bm{r}}}
+E &= \bm{p}^H\bm{p} - C^2_t \\
+C^2_t &= \frac{(\bm{r}^H \bm{p})^2}{\bm{r}^H\bm{r}} \\
+C_t &= \frac{\bm{r}^H \bm{p}}{\sqrt{\bm{r}^H\bm{r}}}
 \end{split}
 \end{equation}
-where $C_t$ is the correlation between the received signal at time $N_t$ (in samples) and the known transmitted pilot signal. Minimising E is equivalent to maximising the correlation $C_t$ or equivalently $\sqrt{C_t}$. Typically $C_t$ is sampled on a grid of $N_t$ values.  When $C_t$ exceeds a threshold, we consider the current $N_t$ as a candidate coarse time offset for further processing.
+where $C_t$ is the correlation between the received signal at time $N_t$ and the known transmitted pilot signal. Minimising E is equivalent to maximising the correlation $C_t$ or equivalently $C^2_t$. Typically $C_t$ is sampled on a grid of $N_t$ values.  When $C_t$ exceeds a threshold, we consider the current $N_t$ as a candidate coarse time offset for further processing.
+$C_t$ is maximised with $\bm{r}=g\bm{p}$:
+\begin{equation}
+\begin{split}
+C_{tmax} &= \frac{g\bm{p}^H \bm{p}}{\sqrt{g\bm{p}^Hg\bm{p}}} \\
+C_{tmax} &= \frac{\bm{p}^H \bm{p}}{\sqrt{\bm{p}^H\bm{p}}}
+\end{split}
+\end{equation}
+By scaling $\bm{p}$ we can set $C_{tmax}$ (e.g. $C_{tmax}=1$). Consider a prototype pilot vector $\bm{\hat{p}}$ such that:
+\begin{equation}
+\begin{split}
+\bm{p} &= s\bm{\hat{p}} \\
+C_{tmax} &= s\frac{\bm{\hat{p}}^H \bm{\hat{p}}}{\sqrt{\bm{\hat{p}}^H\bm{\hat{p}}}} \\
+s &= C_{tmax}\frac{\sqrt{\bm{\hat{p}}^H\bm{\hat{p}}}}{\bm{\hat{p}}^H \bm{\hat{p}}}
+\end{split}
+\end{equation}
+where $s$ is a scale factor chosen to achieve our desired $C_{tmax}$.
+
+\subsection {Pilot Carriers}
 
 A common acquisition strategy is to add one or more pilot carriers to aid frequency offset estimation. These carriers consume power and carry no payload data so an increase in the threshold SNR is required to maintain the voice link. Consider the effect on $E_b$ when adding an additional carrier:
 \begin{equation}
