--- a/freedv_low/freedv_low.tex
+++ b/freedv_low/freedv_low.tex
@@ -637,7 +637,8 @@ C^2_t &= \frac{(\bm{r}^H \bm{p})^2}{\bm{r}^H\bm{r}} \\
 C_t &= \frac{\bm{r}^H \bm{p}}{\sqrt{\bm{r}^H\bm{r}}}
 \end{split}
 \end{equation}
-where $C_t$ is the correlation between the received signal at time $N_t$ and the known transmitted pilot signal. Minimising E is equivalent to maximising the correlation $C_t$ or equivalently $C^2_t$. Typically $C_t$ is sampled on a grid of $N_t$ values.  When $C_t$ exceeds a threshold, we consider the current $N_t$ as a candidate coarse time offset for further processing.
+where $C_t$ is the correlation between the received signal at time $N_t$ and the known transmitted pilot signal. Minimising E is equivalent to maximising the magnitude of the correlation $|C_t|$ or equivalently $C^2_t$. Typically $C_t$ is sampled on a grid of $N_t$ values.  When $C_t$ exceeds a threshold, we consider the current $N_t$ as a candidate coarse time offset for further processing.
+
 $C_t$ is maximised with $\bm{r}=g\bm{p}$:
 \begin{equation}
 \begin{split}
@@ -654,6 +655,19 @@ s &= C_{tmax}\frac{\sqrt{\bm{\hat{p}}^H\bm{\hat{p}}}}{\bm{\hat{p}}^H \bm{\hat{p}
 \end{split}
 \end{equation}
 where $s$ is a scale factor chosen to achieve our desired $C_{tmax}$.
+
+Figure \ref{fig:acq_ct_scatter} illustrates an issue with the use of a fixed threshold currently used in FreeDV 700D/E and OFDM data modes.  An improvement would be a threshold that changes dynamically based on the noise power.
+
+
+\begin{figure}[H]
+\caption{Plot of $C_t$ sampled once a symbol over 50 modem frames. The $\bm{r}^H\bm{r}$ normalising term on the denominator of (\ref{eq:acq_corr}) reduces $|C_{tmax}|$ in the presence of noise. Thus a fixed threshold (as presently used in 700D/E) will be problematic.}
+\label{fig:acq_ct_scatter}
+\begin{center}
+\input acq_ct_scatter.tex
+\end{center}
+\end{figure}
+
+
 
 \subsection {Pilot Carriers}
 
