--- a/freedv_low/freedv_low_refs.bib
+++ b/freedv_low/freedv_low_refs.bib
@@ -26,3 +26,7 @@
   title = {{Codec 2 repo, modem codec frame design spreadsheet}},
   note = {\url{https://github.com/drowe67/codec2/blob/main/doc/modem_codec_frame_design.ods}}
 }
+@misc{rayleigh,
+  title={{Rayleigh Distribution}},
+  note = {\url{https://en.wikipedia.org/wiki/Rayleigh_distribution}}
+}
