--- a/freedv_low/freedv_low.tex
+++ b/freedv_low/freedv_low.tex
@@ -678,27 +678,34 @@ Consider the numerator of $|C_t|$ (\ref{eq:acq_corr}) when only noise $\bm{n}$ w
 D_t = \bm{r}^H\bm{p} = \bm{n}^H\bm{p}
 \end{equation}
 
-For a typical sequence of pilots with equal amplitudes $P_c=\pm1$ the variance of $D_t$ will be the same as the variance of $\bm{n}$.  The magnitude of a complex Gaussian noise signal has a Rayleigh distribution \cite{rayleigh} with PDF:
+For a typical sequence of pilots with equal amplitudes $P_c=\pm1$ the variance of $D_t$ will be the same as the variance as $\bm{n}$.  The magnitude of a complex Gaussian noise signal has a Rayleigh distribution \cite{rayleigh} with CDF:
 \begin{equation}
-PDF(x) = \frac{x}{\sigma^2}e^{-x^2/(2 \sigma_r^2)}
+CDF(x) = 1 - e^{-x^2/(2 \sigma_r^2)}
 \end{equation}
-where $\sigma_r$ is the Rayleigh scale parameter.  In our case we have spread the noise power $\sigma^2$ between two orthogonal channels such that $\sigma_r = \sigma/\sqrt{2}$. The probability of any sample $|D_t|$ is therefore:
+where $\sigma_r$ is the Rayleigh scale parameter.  In our case we have spread the noise power $\sigma^2$ between two orthogonal channels such that $\sigma_r = \sigma/\sqrt{2}$. $CDF(x)$ is he probability that a sample is less than $x$.  The probability of samples greater than $x$ is therefore $1-CDF(x)$.  We define $P_t$ as the probability of a sample greater than or equal to $|D_t|$: 
 \begin{equation}
 \label{eq:prob_thresh}
 \begin{split}
-P_t &= PDF(|D_t|) \\
-    &= \frac{|D_t|}{\sigma^2}e^{-|D(t)|^2/\sigma^2}
+P_t &= P(\ge|D_t|) \\
+    &= e^{-|D(t)|^2/\sigma^2} \\
 \end{split}
 \end{equation}
+Note that large values of $D_t$ are unlikely (low $P_t$) with noise alone. By rearranging (\ref{eq:prob_thresh}) let us set a threshold:
+\begin{equation}
+\label{eq:corr_prob}
+D_{thresh}= \sigma\sqrt{-ln(P_{thresh})}
+\end{equation}
+using a sufficiently low probability $P_{thresh}$. Now if $D_t > D_{thresh}$, we can conclude that $p(n)$ has been detected.  
 
-Note that small values of $P_t$ are unlikely with noise alone. If $P_t < P_{thresh}$ (where $P_{thresh}$ is small) we can therefore conclude that $p(n)$ has been detected.  When a signal is present the distribution will no longer be Rayleigh.  In fact the variance of $|D_t|$ will be somewhat larger than the noise alone case due to partial correlation matches with payload data symbols. However $|D_{tmax}|$ exhibits strong correlation peaks with $p(n)$, so comfortably exceeds any threshold calculated from the noise only model.
+When a signal is present the distribution will no longer be Rayleigh.  In fact the variance of $|D_t|$ will be somewhat larger than the noise alone case due to partial correlation matches with payload data symbols. However $|D_t|$ exhibits strong correlation peaks with $p(n)$, so comfortably exceeds any threshold calculated from the noise only model.
 
 The new acquisition algorithm is therefore:
 \begin{enumerate}
-\item Using simulation results set a threshold $P_{thresh}$ such that $P_t >> P_{thresh}$ with noise alone but $P_t < P_{thresh}$ when signal is present for $E_b/N_0 > 0$ dB.
-\item Estimate the noise power $\sigma^2=Var(r(n))$ over a window of one modem frame $T_f$ seconds. This will be an approximation, as $\bm{r}$ includes noise and wanted signal.
-\item Find the peak $D_{tmax}$ over the window of $T_f$ seconds and calculate $P_{tmax}$ using (\ref{eq:prob_thresh}).
-\item If $P_{tmax} < P_{thresh}$ we have found a candidate $p(n)$ sequence and the start of a modem frame.
+\item Using simulation results set a threshold $P_{thresh}$ such that $D_t < D_{thresh}$ with noise alone but $D_t < D_{thresh}$ when signal is present for $E_b/N_0 > 0$ dB.
+\item At run time, estimate the noise power $\sigma^2=Var(r(n))$ over a window of one modem frame $T_f$ seconds. This will be an approximation, as $\bm{r}$ includes noise and wanted signal.
+\item Find the peak $D_{tmax}$ over the window of $T_f$ seconds.
+\item Calculate $D_{thresh}$ using (\ref{eq:corr_prob}).  Note that unlike the existing 700D/E acquisition algorithm $D_{thresh}$ is dynamic, and based on current the variance of the received signal.
+\item If $D_{tmax} > D_{thresh}$ we have found a candidate $p(n)$ sequence and the start of a modem frame.
 \end{enumerate}
 
 \subsection {Pilot Carriers}
