fixed arith series error

--- a/rect_ft/rect_ft.tex
+++ b/rect_ft/rect_ft.tex
@@ -76,7 +76,7 @@ This can be interpreted as a complex term representing a linear phase shift (del
 
 Equation \ref{eq:dtcf} can also be derived using the closed form expression for the sum of a geometric series:
 \begin{equation} \label{eq_geosum}
-\sum_{k=0}^{K-1} ar^k = a \left( \frac{1-r^n}{1-r} \right)
+\sum_{k=0}^{n-1} ar^k = a \left( \frac{1-r^n}{1-r} \right)
 \end{equation}
 
 \section {Low Pass Filter Design}
